ignore some errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,8 @@ omit = [
     "*/conftest.py", "*/test*", # omit test files
 ]
 
+[tool.pylint."messages control"]
+disable=["too-few-public-methods","missing-class-docstring", "no-member"]
+
 [tool.coverage.report]
 fail_under = 80
